# customer-support-agent-ai

./: .gitignore  Dockerfile  GEMINI.md  README.md  agents-cli-manifest.yaml  chatbot_ui.py  pyproject.toml  run_customer.bat  start.sh
app/: agent.py
tests/: test_agent.py
