[project]
name = "customer_support_agent"
version = "0.1.0"
description = "Graph workflow customer support agent for a shipping company, built with ADK 2.0."
authors = [
    {name = "Your Name", email = "your@email.com"},
]

dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "streamlit>=1.58.0",
    "litellm>=1.75.5",
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.4.6,<1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501", "B006"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["app"]


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
